-Fixed word wrap on main page in firefox

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,8 +58,17 @@ body, html {
 
 .textBlock {
     font-size: 150%;
-    word-wrap:break-word;
     
     padding-left: 5%;
     padding-right: 5%;
+    
+    -ms-word-break: break-all;
+    word-break: break-all;
+
+    // Non standard for webkit
+    word-break: break-word;
+
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
 }
